# my-ai-trip

./: .env  .gitignore  AGENTS.md  README.md  package.json
backend/: pyproject.toml
backend/app/: models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: trip.py  utils.py
backend/tests/api/routes/: test_login.py  test_trip.py  test_utils.py
docs/: backlog.md
frontend/: Dockerfile.playwright  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: locale-provider.tsx
frontend/src/components/Common/: Appearance.tsx  AuthLayout.tsx  ErrorComponent.tsx  Footer.tsx  LanguageToggle.tsx  Logo.tsx  NotFound.tsx
frontend/src/components/Sidebar/: AppSidebar.tsx  User.tsx
frontend/src/hooks/: useCustomToast.ts
frontend/src/routes/: _layout.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
frontend/src/routes/_layout/: admin.tsx  index.tsx  items.tsx  settings.tsx  trip.tsx
frontend/tests/: login.spec.ts
frontend/tests/utils/: user.ts
